# risk-ads

./: .env.example  .gitignore  README.md  config.yaml  log.md  plan.md  pyproject.toml
.claude/commands/: end.md  start.md
data/manual_exports/: Campaign performance.csv  Change history report.csv  Search keyword.csv  matrixify_custom_label_0.csv  matrixify_unlabeled_products.csv  matrixify_unlabeled_variants.csv  merchant_supplemental_feed.csv  product_not_labeled.csv  productos_classified.csv  productos_export.csv
reports/2026-04-20/: baseline.md  matrixify_summary.md  product_classification.md
reports/2026-05-04/: postmortem.md  unlabeled_products_summary.md  unlabeled_variants_summary.md
scripts/: bidding_audit.py  current_state_report.py  gen_design_doc.py  oauth.py  smoke_test.py  yoy_q1_report.py
scripts/ads_scripts/: 01_cleanup_reallocation.js  02_brand_campaign.js  03_reporting.js  04_structure_audit.js  05_product_audit.js
src/: cli.py
src/analyze/: generate_matrixify_feed.py  generate_matrixify_feed_variant_level.py  generate_supplemental_feed.py  generate_unlabeled_product_feed.py  generate_unlabeled_variant_feed.py  product_bucket_classifier.py
